--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@ body {
     position: relative;
     display: flex;
     width: 100%;
-    height: 150px;
+    height: 120px;
     background-color: #ebb608;
+    opacity: 0.8;
 }
 .header h1 {
     position: relative;
@@ -36,37 +37,214 @@ body {
     font-weight: 400;
     font-size: 18px;
 }
-#random {
-    position: relative;
-    left: 580px;
-    top: 75px;
-    border: 2px solid #be2929;
-    color: black;
-    font-weight: 400;
-    font-size: 14px;
-    border-radius: 4px;
-    width: 130px;
-    height: 50px;
-    background-color: #eefd66;
-}
-#random:hover {
-    color: rgb(253, 255, 251);
-    cursor: pointer;
-    background-color: #db2929;
-    border-radius: 20px 0 20px 0;
-    border: 2px solid #000000;
-    
-}
-
 .bluda {
     position: relative;
     text-decoration: none;
     top: 250px;
-    left: 300px;
+    left: 140px;
     color: #000000;
     font-weight: 400;
     font-size: 20px;
 }
 .bluda:hover {
     color: rgb(32, 29, 201);
+}
+button {
+    position: relative;
+    left: 450px;
+    top: 40px;
+    padding: 1em 1.8em;
+    outline: none;
+    border: 1px solid #222020;
+    background: #1a1818;
+    color: #ffe600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 15px;
+    overflow: hidden;
+    transition: 0.2s;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+   }
+   
+   button:hover {
+    box-shadow: 0 0 10px #ff5e00, 0 0 25px #001eff, 0 0 50px #ff9b04;
+    transition-delay: 0.6s;
+   }
+   
+   button span {
+    position: absolute;
+   }
+   
+   button span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #ff9900);
+   }
+   
+   button:hover span:nth-child(1) {
+    left: 100%;
+    transition: 0.7s;
+   }
+   
+   button span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #ff5100);
+   }
+   
+   button:hover span:nth-child(3) {
+    right: 100%;
+    transition: 0.7s;
+    transition-delay: 0.35s;
+   }
+   
+   button span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #ffd900);
+   }
+   
+   button:hover span:nth-child(2) {
+    top: 100%;
+    transition: 0.7s;
+    transition-delay: 0.17s;
+   }
+   
+   button span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #fffb00);
+   }
+   
+   button:hover span:nth-child(4) {
+    bottom: 100%;
+    transition: 0.7s;
+    transition-delay: 0.52s;
+   }
+   
+   button:active {
+    background: #e70707;
+    background: linear-gradient(to top right, #ffc401, #ff4800);
+    color: #bfbfbf;
+    box-shadow: 0 0 8px #ae00ff, 0 0 8px #001eff, 0 0 8px #ae00ff;
+    transition: 0.1s;
+   }
+   
+   button:active span:nth-child(1) 
+   span:nth-child(2) 
+   span:nth-child(2) 
+   span:nth-child(2) {
+    transition: none;
+    transition-delay: none;
+   }
+   @keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #f9f58b;
+    overflow: hidden;
+}
+
+.background span {
+    width: 14vmin;
+    height: 14vmin;
+    border-radius: 14vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 50;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+.background span:nth-child(0) {
+    color: #ffdd00;
+    top: 84%;
+    left: 95%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: -2vw -24vh;
+    box-shadow: -28vmin 0 4.139441112609735vmin currentColor;
+}
+.background span:nth-child(1) {
+    color: #ffdd00;
+    top: 22%;
+    left: 37%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: -21vw 18vh;
+    box-shadow: 28vmin 0 4.22785502268289vmin currentColor;
+}
+.background span:nth-child(2) {
+    color: #ffdd00;
+    top: 21%;
+    left: 100%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: -12vw -5vh;
+    box-shadow: -28vmin 0 4.315681999761812vmin currentColor;
+}
+.background span:nth-child(3) {
+    color: #d9f505;
+    top: 28%;
+    left: 76%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: 13vw 1vh;
+    box-shadow: 28vmin 0 3.679701693641977vmin currentColor;
+}
+.background span:nth-child(4) {
+    color: #ff4000;
+    top: 35%;
+    left: 2%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: -22vw 8vh;
+    box-shadow: -28vmin 0 3.6679924188211483vmin currentColor;
+}
+.background span:nth-child(5) {
+    color: #ffdd00;
+    top: 73%;
+    left: 86%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: 11vw 12vh;
+    box-shadow: 28vmin 0 4.0603514324911645vmin currentColor;
+}
+.background span:nth-child(6) {
+    color: #ffdd00;
+    top: 51%;
+    left: 97%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: 12vw -2vh;
+    box-shadow: 28vmin 0 3.892224391964228vmin currentColor;
+}
+.background span:nth-child(7) {
+    color: #ffdd00;
+    top: 40%;
+    left: 39%;
+    animation-duration: 6s;
+    animation-delay: -1s;
+    transform-origin: -22vw -18vh;
+    box-shadow: -28vmin 0 4.334794587751122vmin currentColor;
 }
